# naijaeval

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: codeswitch_v1.jsonl  cultural_v1.jsonl  factual_v1.jsonl  pidgin_chat_v1.jsonl
docs/: rubrics.md  schema.md  spec.md  tickets.md
naijaeval/judges/: __init__.py
