[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "naijaeval"
version = "0.1.0"
description = "Nigerian Pidgin & code-switching LLM evaluation harness, built on lm-evaluation-harness"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "lm-eval>=0.4.0",
    "openai>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
naijaeval = "naijaeval.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
